--- a/render.yaml
+++ b/render.yaml
@@ -2,16 +2,18 @@ services:
   - type: web
     name: esc-guidelines-search
     env: python
-    plan: starter
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
+    plan: standard
+    buildCommand: pip install -r requirements.txt && python build.py
+    startCommand: gunicorn --bind 0.0.0.0:$PORT --timeout 120 --workers 1 --max-requests 1000 app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: PORT
         value: 10000
+      - key: PYTHONUNBUFFERED
+        value: 1
     disk:
       name: esc-data
       mountPath: /opt/render/project/src/data
-      sizeGB: 1
+      sizeGB: 2
 
